2008-12-29  Daniel Elstner  <danielk@openismus.com>

	* clutter/src/actor.hg (Actor::pick): Make public because custom
	container implementations need to call this method.
	(Actor::should_pick_paint): ditto.

2008-12-29  Daniel Elstner  <danielk@openismus.com>

	* clutter/src/container.{ccg,hg} (Container::actor_added): New method
	which emits the "actor-added" signal.  This precludes the need to use
	the GObject API directly when implementing a custom container in C++.
	(Container::actor_removed): Likewise for the "actor-removed" signal.

2008-12-24  Daniel Elstner  <danielk@openismus.com>

	* clutter/src/actor.{ccg,hg} (ActorFlags): Wrap enumeration.
	({set,unset,get}_flags): Implement missing accessors.
	(is_{mapped,realized,visible,reactive}): ditto.
	* tools/m4/convert_cluttermm.m4 (ActorFlags): Add generic
	enumeration conversions and a special conversion from guint32.

2008-12-24  Daniel Elstner  <danielk@openismus.com>

	* clutter/src/box.hg (PackType): Remove NO_GTYPE flag passed to
	_WRAP_ENUM(), because the enumeration in question clearly has a
	GObject type and associated _get_type() function.
	* clutter/src/layout.hg (LayoutFlags): ditto,
	* clutter/src/path.hg (PathNodeType): ditto,
	* clutter/src/texture.hg (TextureFlags): ditto,
	(TextureQuality): ditto,
	* clutter/src/timeline.hg (TimelineDirection): ditto,
	* clutter/src/types.hg (RotateDirection): ditto,
	(RotateAxis): ditto,
	(Gravity): ditto,
	(RequestMode): ditto.

2008-12-24  Daniel Elstner  <danielk@openismus.com>

	* clutter/src/texture.hg (Texture::*): Revert to use guchar instead
	of guint8 to stay consistent with the Clutter C API.

2008-12-23  Daniel Elstner  <danielk@openismus.com>

	* clutter/src/texture.{ccg,hg} (Texture::set_from_file): Replace
	Glib::ustring parameter type by std::string.  Filenames have no
	defined character encoding!
	* clutter/src/texture.{ccg,hg} (Texture::create_from_file): Add it.
	The justification for not wrapping clutter_texture_new_from_file()