@@ -1,9 +1,11 @@
 
 doxygen_configfile = Doxyfile
-web_path_reference = /home/groups/g/gt/gtkmm/htdocs/gtkmm2DONTUPLOADTHIS/reference
 
 EXTRA_DIST	= README $(doxygen_configfile)
 
+
+include $(top_srcdir)/docs/Makefile_web.am_fragment
+web_path_reference = $(web_path_docs)reference
 
 cluttermm-reference: $(doxygen_configfile)
 	doxygen $(doxygen_configfile)
@@ -13,11 +15,8 @@ cluttermm-reference-html: cluttermm-reference
 cluttermm-reference-html.tar.gz: cluttermm-reference-html
 	tar -cf - $< | gzip > $@
 
-
-post-html: cluttermm-reference
-	(cd html && tar -cf - *.html *.gif *.css | gzip -3 | \
-	 ssh $$SSH_OPT $$USER@gtkmm.sourceforge.net "cd $(web_path_reference)/html ; gunzip | tar -xvf - ; chmod a+r,g+w * ; chgrp gtkmm *")
-
+post-html: html/index.html
+	rsync $(rsync_args) -r html/ $$USER@$(web_host):$(web_path_reference)/html/
 
 all-local: cluttermm-reference
 
