@@ -1,3 +1,12 @@
+2009-01-06  Murray Cumming  <murrayc@murrayc.com>
+
+	* docs/Makefile.am:
+	* docs/Makefile_web.am_fragment:
+	* docs/reference/Makefile.am: Quick-but-kind-of-works upload of 
+	the documentation. We really need to get library.gnome.org working for us.
+	There are no inter-links yet, for instance to glibmm - that needs us to 
+	arrange the Doxygen tags as done already elsewhere.
+
 2008-12-29  Daniel Elstner  <danielk@openismus.com>
 
 	* clutter/src/actor.hg (Actor::pick): Make public because custom
